src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__worker_panel__tests__snapshot_narrow_width_20_focused.snap
---
source: src/commands/task/orchestrate/worker_panel.rs
expression: snapshot
---
┌ ▶ W3 [15: ui] ────
│ ◎ reviewing
│
│
│
│ $0.0010 │ ↓100 ↑50
