src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__worker_panel__tests__snapshot_narrow_width_30_with_long_output.snap
---
source: src/commands/task/orchestrate/worker_panel.rs
expression: snapshot
---
┌ W1 [16.1: core] ────────────
│ ● implementing
│ Line 1 normal
│ This is a very long line
│ that will definitely wrap
│ in a 30-char wide terminal
│ Short
│ Another long line with many
│ words that should cause
│ wrapping behavior
│
│ $0.0000 │ ↓0 ↑0
