src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__worker_panel__tests__snapshot_panel_unfocused_border.snap
---
source: src/commands/task/orchestrate/worker_panel.rs
expression: snapshot
---
┌ W1 [2.1: api] ──────────────────────────────────
│ ● implementing
│
│
│
│ $0.0420 │ ↓1.5k ↑2.3k
