src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__worker_panel__tests__snapshot_panel_with_output_lines.snap
---
source: src/commands/task/orchestrate/worker_panel.rs
expression: snapshot
---
┌ W1 [9.1: core] ──────────────────────────────────────
│ ● implement
│ Compiling ralph-wiggum v0.1.0
│   Running `target/debug/ralph`
│ warning: unused variable `x`
│   --> src/main.rs:42:9
│ Build completed successfully
│
│
│ $0.0000 │ ↓0 ↑0
