src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__worker_panel__tests__snapshot_state_implementing.snap
---
source: src/commands/task/orchestrate/worker_panel.rs
expression: snapshot
---
┌ W2 [5.1] ───────────────────────────────────────
│ ● implement
│
│
│ $0.0000 │ ↓0 ↑0
