src/commands/task/orchestrate/snapshots/ralph_wiggum__commands__task__orchestrate__worker_panel__tests__snapshot_state_merging.snap
---
source: src/commands/task/orchestrate/worker_panel.rs
expression: snapshot
---
┌ W3 [12.1] ──────────────────────────────────────
│ ⊕ merging
│
│
│ $0.0000 │ ↓0 ↑0
